# EMAP

./: .env.example  .gitignore  FULL_PLAN.md  HANDOFF.md  README.md  pyproject.toml  requirements.txt
examples/: demo_evolution.py
experiments/: dashboard.html  quick_demo.py  recover_best_genomes.py  run_all_experiments.py  run_baseline.py  run_experiments.py  run_focused_experiments.py  run_full_overnight.py  run_single_experiment.py  serve_dashboard.py
experiments/results/: baseline_results.json  baseline_sample10.json  baseline_sample50.json  evolution_budget10000_seed42.json  evolution_budget10000_seed43.json  evolution_budget2000_seed42.json  evolution_budget50000_seed42.json  evolution_budget5000_seed42.json  evolution_budget5000_seed43.json
experiments/results/focused/: evolution_budget10000_seed42.json  evolution_budget10000_seed43.json  evolution_budget10000_seed44.json  evolution_budget2000_seed42.json  evolution_budget2000_seed43.json  evolution_budget2000_seed44.json  evolution_budget50000_seed42.json  evolution_budget50000_seed43.json  evolution_budget50000_seed44.json  evolution_budget5000_seed42.json  evolution_budget5000_seed43.json  evolution_budget5000_seed44.json  summary.json
overleaf_upload/: main.tex
paper/: LITERATURE_REVIEW.md  RESEARCH_PLAN.md  main.tex  references.bib
src/emap/: __init__.py  cli.py
src/emap/agents/: __init__.py  executor.py
src/emap/analysis/: __init__.py
src/emap/benchmarks/: __init__.py  humaneval.py  sandbox.py
src/emap/evolution/: __init__.py  fitness.py  integrated_eval.py  loop.py  selection.py
src/emap/genome/: __init__.py  operators.py  representation.py
src/emap/visualization/: __init__.py  components.py  dashboard.py  themes.py
tests/: test_agents.py  test_evolution.py  test_genome.py
